Add support mail address

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div>
       <h1>Sentimizer</h1>
       <a href="privacy.html">Privacy Policy</a>
+      <p>Support: samuel.ginsberg@t-online.de</p>
 
   </div>
 
