Add description text

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <div class="middle-container">
     <div>
       <h1>Sentimizer</h1>
+      <h4>Optimize Your Life - Your smart diary and mood tracker</h4>
       <a href="privacy.html">Privacy Policy</a>
       <p>Support: samuel.ginsberg@t-online.de</p>
 
