--- a/privacy.html
+++ b/privacy.html
@@ -3,20 +3,29 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Sentimizer</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <!-- <link rel="shortcut icon" href="favicon.ico"> -->
+  <title>Sentimizer - Privacy</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
+
+  <!-- CSS Stylesheets -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/styles.css">
+
+  <!-- Bootstrap Scripts -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div>
-    <div>
+  <div class="container-fluid">
       <h1>Sentimizer</h1>
-      <h2>Privacy Policy</h2>
-      <div><p>
+      <h3>Privacy Policy</h3>
+
+      <div style="text-align: left;">
+        <p>
         Justin Hohenstein built the Sentimizer app as a Free app. This SERVICE is provided by Justin Hohenstein at no cost and is intended for use as is.
         <br>
         This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
@@ -38,9 +47,17 @@
         <b>Consent</b><br>
         By using our app, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.
       </p>
-    </div>
-
   </div>
 </body>
+
+<!-- Footer -->
+
+<footer class="white-section" id="footer">
+  <div class="container-fluid">
+    <p>© Copyright 2022 Samuel Ginsberg</p>
+    <p>Support and Feedback: samuel.ginsberg@t-online.de</p>
+    <a href="index.html">Home</a>
+  </div>
+</footer>
 
 </html>
