Optimize Website; Add App Icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sentimizer - Smart Diary</title>
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+<link rel="shortcut icon" href="images/favicon.ico" />
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -131,8 +131,8 @@
   <section class="colored-section-dark" id="cta">
 
     <div class="container-fluid">
-
-      <h3 class="big-heading">Download This Monday.</h3>
+      <img class="logo" src="images/logo.png" alt="Sentimizer App Logo">
+      <h3 class="big-heading">Download Sentimizer This Monday.</h3>
       <!-- <button class="download-button btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i> Download</button> -->
     </div>
   </section>
