--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sentimizer - Privacy</title>
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+<link rel="shortcut icon" href="images/favicon.ico" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
