--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="row">
 
         <div class="col-lg-6">
-          <h1 class="big-heading">Not Just Another Mood Tracker</h1>
+          <h1 class="big-heading">Not Just Another Mood Tracker.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download Available Monday</button>
         </div>
 
@@ -63,22 +63,28 @@
     <div class="container-fluid">
 
       <div class="row">
-        <div class="feature-box col-lg-4">
+        <div class="feature-box col-lg-3">
           <i class="icon fas fa-book fa-4x"></i>
           <h3 class="feature-title">Smart Diary & Mood Tracker</h3>
           <p>Save important activities and how you feel after doing them.</p>
         </div>
 
-        <div class="feature-box col-lg-4">
+        <div class="feature-box col-lg-3">
           <i class="icon fas fa-smile fa-4x"></i>
           <h3 class="feature-title">Recommendations based on your moods</h3>
           <p>Sentimizer will recommend you to do activities that boost your mood and productivity, based on advanced Machine Learning computations.</p>
         </div>
 
-        <div class="feature-box col-lg-4">
+        <div class="feature-box col-lg-3">
           <i class="icon fas fa-chart-line fa-4x"></i>
           <h3 class="feature-title">Detailed Statistics</h3>
           <p>View statistics about your mood trend and get to know how different activities influence it.</p>
+        </div>
+
+        <div class="feature-box col-lg-3">
+          <i class="icon fas fa-chart-line fa-4x"></i>
+          <h3 class="feature-title">Great Overview</h3>
+          <p>Use the Calendar to get an overview of your past activities and to plan for the future.</p>
         </div>
       </div>
 
