--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
 
         <div class="feature-box col-lg-3">
-          <i class="icon fas fa-chart-line fa-4x"></i>
+          <i class="icon fas fa-calendar fa-4x"></i>
           <h3 class="feature-title">Great Overview</h3>
           <p>Use the Calendar to get an overview of your past activities and to plan for the future.</p>
         </div>
