--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sentimizer - Privacy</title>
-<link rel="shortcut icon" href="images/favicon.ico" />
+  <link rel="shortcut icon" href="images/favicon.ico" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,22 +21,22 @@
 
 <body>
   <div class="container-fluid">
-      <h1>Sentimizer</h1>
-      <h3>Privacy Policy</h3>
+    <h1>Sentimizer</h1>
+    <h3>Privacy Policy</h3>
 
-      <div style="text-align: left;">
-        <p>
-          <br>
-          <br>
+    <div style="text-align: left;">
+      <p>
+        <br><br>
         Justin Hohenstein built the Sentimizer app as a Free app. This SERVICE is provided by Justin Hohenstein at no cost and is intended for use as is.
         <br>
         This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
-
         <br><br>
-        <b>Sentimizer does not collect any data. Everything is only saved on your device.</b> We regularly send parts of the data you provided to a server. The server immediately deletes the data after analyzing it. We don't share any of your data with other people or companies.
+        <b>Sentimizer does not collect any data. Everything is only saved on your device.</b> We regularly send parts of the data you provided to a server. The server immediately deletes the data after analyzing it. We don't share any of your data
+        with other people or companies.
         <br><br>
         <b>Security</b><br>
-        I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
+        I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100%
+        secure and reliable, and I cannot guarantee its absolute security.
         <br><br>
         <b>Changes to This Privacy Policy</b><br>
         I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.
@@ -49,7 +49,7 @@
         <b>Consent</b><br>
         By using our app, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.
       </p>
-  </div>
+    </div>
 </body>
 
 <!-- Footer -->
