--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Sentimizer - Smart Diary</title>
-<link rel="shortcut icon" href="images/favicon.ico" />
+  <link rel="shortcut icon" href="images/favicon.ico" />
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,11 +31,10 @@
 
       <!-- Nav Bar -->
 
-      <nav class="navbar navbar-expand-lg navbar-dark">
+      <nav class="navbar navbar-dark">
 
         <a class="navbar-brand" href="">Sentimizer</a>
       </nav>
-
 
       <!-- Title -->
 
@@ -93,7 +93,7 @@
   </section>
 
 
-  <!-- screenshots -->
+  <!-- Screenshots -->
 
   <section class="colored-section" id="screenshots">
 
