--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width" />
+  
   <title>Sentimizer - Smart Diary</title>
   <link rel="shortcut icon" href="images/favicon.ico" />
 
