Add summary on top

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
-  
+
   <title>Sentimizer - Smart Diary</title>
   <link rel="shortcut icon" href="images/favicon.ico" />
 
@@ -44,6 +44,7 @@
 
         <div class="col-lg-6">
           <h1 class="big-heading">Not Just Another Mood Tracker.</h1>
+          <h3 class="feature-summary">Optimize Your Life - The Smart Diary that improves your mood and productivity.</h3>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download Available Monday</button>
         </div>
 
