--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
-  
+
   <title>Sentimizer - Privacy</title>
   <link rel="shortcut icon" href="images/favicon.ico" />
 
@@ -29,7 +29,7 @@
     <div style="text-align: left;">
       <p>
         <br><br>
-        Justin Hohenstein built the Sentimizer app as a Free app. This SERVICE is provided by Justin Hohenstein at no cost and is intended for use as is.
+        Justin Hohenstein, Samuel Ginsberg and Henry Pham built the Sentimizer app as a Free app. This SERVICE is provided by Justin Hohenstein at no cost and is intended for use as is.
         <br>
         This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
         <br><br>
