Update privacy policy name

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="container-fluid">
       <p>© Copyright 2022 Samuel Ginsberg</p>
       <p>Support and Feedback: samuel.ginsberg@t-online.de</p>
-      <a href="privacy.html">Privacy Policy</a>
+      <a href="privacy.html">App Privacy Policy</a>
     </div>
   </footer>
 
