--- a/privacy.html
+++ b/privacy.html
@@ -23,7 +23,7 @@
 
 <body>
   <div class="container-fluid">
-    <h1>Sentimizer</h1>
+    <h1>Sentimizer iOS App</h1>
     <h3>Privacy Policy</h3>
 
     <div style="text-align: left;">
