Add download link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="col-lg-6">
           <h1 class="big-heading">Not Just Another Mood Tracker.</h1>
           <h3 class="feature-summary">Optimize Your Life - The Smart Diary that improves your mood and productivity.</h3>
-          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download Available Monday</button>
+          <button onclick="window.location.href='https://apps.apple.com/app/sentimizer-smart-diary/id1624777204';" type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
         </div>
 
         <div class="col-lg-6">
@@ -141,8 +141,8 @@
 
     <div class="container-fluid">
       <img class="logo" src="images/logo.png" alt="Sentimizer App Logo">
-      <h3 class="big-heading">Download Sentimizer This Monday.</h3>
-      <!-- <button class="download-button btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i> Download</button> -->
+      <h3 class="big-heading">Download Sentimizer and Improve Your Life.</h3>
+      <button onclick="window.location.href='https://apps.apple.com/app/sentimizer-smart-diary/id1624777204';" class="download-button btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i> Download</a>
     </div>
   </section>
 
